--- a/style.css
+++ b/style.css
@@ -3,6 +3,18 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.cabecera {
+    background-color: rgb(138, 233, 236);
+    border: 4px cadetblue solid;
+    margin-top: 20px;
+    padding: 0 20px;
+    display: inline-block;
+    width: 70%;
+    font-size: 40px;
+    box-shadow:cadetblue;
+    text-align: center;
 }
 .post {
     color:cadetblue;
