--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     width: 70%;
     font-size: 40px;
     text-align: center;
+    border-radius: 10px 10px 0 0;
     
 }
 .cabecera img {
